--- a/style.css
+++ b/style.css
@@ -16,31 +16,52 @@
 
 body{
   background: linear-gradient(to left top, rgba(100, 17, 17, 1), #181818);
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  min-height: 100vh;
 }
 
 .container-fluid{
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main{
+  flex-grow: 1;
 }
 
 .Nav{
   background-color: var(--col3);
   color: white;
   margin: 0;
-  padding: 5px;
-  width: 100%;
+  padding: 10px 0px 6px 0px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin: 0px 2%;
+  border-radius: 5px;
+  transition: all 0.5s;
+}
+
+#logo{
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  transform-origin: bottom;
 }
 
 .Nav > h5{
-  font-size: 20px;
+  font-size: 22px;
+  padding: 7px;
+  border-radius: 5px;
+  transition: all 0.6s;
 }
 
 .Nav > h4{
-  font-size: 20px;
+  font-size: 22px;
+  padding: 7px;
+  border-radius: 5px;
+  transition: all 0.6s;
 }
 
 .heading{
@@ -78,6 +99,7 @@ body{
 .events > .event-item{
   color: var(--col6);
   padding: 5px 20px;
+  font-size: 14px;
 }
 
 .item-title{
@@ -90,22 +112,99 @@ body{
   border-width: 2px;
   border-style: solid;
   border-image: 
-    linear-gradient(rgba(0, 0, 0, 0.5) 10%, red 90%) 1 100%;
+    linear-gradient(rgba(0, 0, 0, 0.4), red, rgba(0, 0, 0, 0.4)) 1 100%;
 }
 
 .carousel{
+  width: fit-content;
   margin-left: auto;
   margin-right: auto;
-  background: none;
-  width: 60vw;
+  padding: 10px;
+  padding-bottom: 50px;
 }
 
-.carousel-item{
+.images{
   display: flex;
-  justify-content: center;
 }
 
-.carousel-item > img{
+.image{
+  width: 450px;
+  height: 230px;
+  position: relative;
+}
+
+.image > img{
   width: 400px;
   height: 200px;
+  margin: 0px 5%;
+  border-radius: 6px;
+  transition: all 0.5s;
+  cursor: pointer;
+  object-fit: cover;
 }
+
+.image > img:hover{
+  width: 440px;
+  height: 220px;
+  margin: 5px;
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+  
+}
+
+.event-name{
+  color: white;
+  position: absolute;
+  height: 50px;
+  bottom: -50px;
+  left: 0;
+  background-color: rgba(255, 0, 0, 0.4);
+  padding: 1px 30px;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 2px;
+  transition: bottom 0.5s;
+}
+
+.carousel-indicators > li{
+  border-radius: 6px;
+}
+
+.carousel-indicators > .active{
+  background-color: var(--col2);
+}
+
+.footer{
+  background-color: var(--col1);
+  color: white;
+  padding-top: 10px;
+  margin: 0 2%;
+  border-radius: 5px;
+}
+
+.Nav:hover{
+  box-shadow: 4px 3px 7px rgba(255, 0, 0, 0.5);
+}
+
+.Nav:hover > h5, .Nav:hover > h4{
+  -webkit-transform: skew(-15deg);
+  -moz-transform: skew(-15deg);
+  -o-transform: skew(-15deg);
+  transform: skew(-15deg);
+  box-shadow: 4px 3px 5px rgba(255, 0, 0, 0.5) ;
+  background-color: rgba(105,105,105,0.6);
+  font-size: 26px;
+}
+
+#logo:hover {
+  animation-name: bounce;
+  animation-timing-function: ease;
+}
+@keyframes bounce {
+0%   { transform: translateY(0); }
+25%  { transform: translateY(15px); }
+50%  { transform: translateY(0px); }
+75%  { transform: translateY(-10px); }
+100% { transform: translateY(0); }
+}
+
