--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ body{
   min-height: 100vh;
 }
 
+body::-webkit-scrollbar{
+  display: none;
+}
+
 .container-fluid{
   padding: 0;
   display: flex;
@@ -32,7 +36,7 @@ body{
 }
 
 .Nav{
-  background-color: var(--col3);
+  background: linear-gradient(to right, #181818, rgba(30, 15, 15, 0.9) );
   color: white;
   margin: 0;
   padding: 10px 0px 6px 0px;
